small fixes like reduced logo img, name convention for tags, overflowing fixed in mobile devices, among other things

--- a/confiabilidadoperacional/src/pages/Home.module.css
+++ b/confiabilidadoperacional/src/pages/Home.module.css
@@ -16,10 +16,9 @@
 }
 
 .postTitle {
-  font-size: 1.5rem;
   width: 90%;
   padding: 0;
-  margin: 1rem;
+  margin: 1rem auto 0;
 }
 
 .horizontalPosts {
@@ -30,9 +29,9 @@
     var(--accent-end) 0%,
     rgba(255, 255, 255, 0.05) 100%
   );
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 16px;
-  margin: 2rem 0;
+  margin: 1rem 0;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -91,7 +90,11 @@
 
 .latestPost,
 .featuredStory {
+  display: flex;
+  flex-direction: column;
   height: auto;
+  justify-content: center;
+  text-align: center;
 }
 
 .item {
@@ -295,6 +298,11 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     display: block;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
   }
 
   .tag {
@@ -315,13 +323,6 @@
     top: auto;
     bottom: 0;
     transform: none;
-  }
-}
-
-@media (min-width: 768px) {
-  .latestPost,
-  .featuredStory {
-    width: 45%;
   }
 }
 
