--- a/confiabilidadoperacional/src/shared/Header/Header.module.css
+++ b/confiabilidadoperacional/src/shared/Header/Header.module.css
@@ -97,8 +97,8 @@ nav {
 }
 
 .bannerimg {
-  height: 8rem;
-  width: 8rem;
+  height: 5rem;
+  width: 5rem;
   position: relative;
   opacity: 1 !important;
 }
@@ -220,7 +220,6 @@ a {
   -webkit-user-drag: none; /* For Chrome, Safari, and Edge */
   -moz-user-drag: none; /* For Firefox */
   -ms-user-drag: none; /* For Internet Explorer/Edge */
-  user-drag: none; /* Standard property */
 }
 
 .themeToggle:hover {
